--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <h1>This is the title of the webpage!</h1>
   </head>
   <body>
-    <h1>This is an example paragraph.</h1>
+    <h2>This is an example paragraph.</h2>
       <!--<strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.-->
   </body>
 </html>
